hey there was an issue on mobile now it should be gone

--- a/css/pretty.css
+++ b/css/pretty.css
@@ -28,8 +28,9 @@ body {
     padding-right: 2.5%;
     border-right: 15px solid #222;
     font-size: 2em;
-    height: 100%;
+    min-height: 100%;
     background-color: #111;
+    overflow: visible;
 }
 
 h1#title {
@@ -83,6 +84,12 @@ a:hover {
         background-color: rgba(17, 17, 17, 0.85);
         font-size: 9vw;
     }
+}
+
+@media screen and (max-height: 555px) {
+  #links {
+      font-size: 5.5vh;
+  }
 }
 
 @media screen and (min-width: 1950px) {
